syntax = "proto3";

option csharp_namespace = "PostService";

service GrpcPost{
	rpc GetAllPost (GetAllPostsRequest) returns (PostResponse);
}

message GetAllPostsRequest {}

message GrpcPostModel{
	int32 Id =1;
	string Name = 2;
	string Description = 3;
}

message PostResponse{
	repeated GrpcPostModel post = 1;
}




